--- a/ExilenceNextApp/public/i18n/en/stepper.json
+++ b/ExilenceNextApp/public/i18n/en/stepper.json
@@ -9,7 +9,9 @@
     "overlay_step": "Overlay section",
     "group_step": "Group section",
     "notifications_step": "Notification list",
-    "support_panel_step": "Support Panel"
+    "support_panel_step": "Support Panel",
+    "currency_switch": "Switch currency",
+    "reset_income": "Reset income"
   },
   "body": {
     "initial_step": "This tour will guide you through the main functions of the app to get you started quickly.",
@@ -21,6 +23,8 @@
     "overlay_step": "Here you can toggle the overlay, for a slim overview while you map!",
     "group_step": "Here you can group up with your friends to see your combined net worth status.",
     "notifications_step": "Everything that happens in the app will be displayed here.",
-    "support_panel_step": "Here you can see what's new in latest release, report a bug, submit a feature request, re-run this tour or get our discord server invitation."
+    "support_panel_step": "Here you can see what's new in latest release, report a bug, submit a feature request, re-run this tour or get our discord server invitation.",
+    "currency_switch": "Clicking this button will switch the currency type between chaos and exalts.",
+    "reset_income": "Click here to quickly reset your income if you think its skewed!"
   }
 }
