--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -61,6 +61,8 @@
     "no_prices_retrieved": "No prices fetched for `{{league}}`, you can change pricing league in your profile",
     "customize_prices": "Customize prices",
     "set_custom_price": "Set custom price",
+    "rate_limit_exceeded": "Rate limit exceeded",
+    "rate_limit_exceeded_prefix": "Rate limit exceeded, please wait",
     "remove_custom_price": "Remove custom price",
     "visible_columns": "Visible columns",
     "custom_price": "Custom price",
