Minor visual tweaks

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -69,7 +69,7 @@
     "visible_columns": "Visible columns",
     "custom_price": "Custom price",
     "custom_price_placeholder": "Custom price",
-    "toggle_visible_columns": "Customize columns",
+    "toggle_visible_columns": "Edit columns",
     "show_stash_tab_filter": "Show filter",
     "disable_stash_tab_filter": "Disable filter",
     "export_image": "Export as PNG to Clipboard",
@@ -97,12 +97,12 @@
     "password": "Password",
     "password_placeholder": "Enter password here",
     "password_helper_text": "Must be at least 6 characters in length",
-    "item_table": "Items",
+    "item_table": "Items recorded in the latest snapshot",
     "graphs": "Graphs",
     "total_value": "Net worth",
     "total_items": "Items",
     "total_income": "Income",
-    "total_snapshots": "Snapshots",
+    "total_snapshots": "Snapshot count",
     "session_id_link": "How to find your session id",
     "include_inventory": "Include inventory",
     "include_equipment": "Include equipment",
@@ -114,7 +114,7 @@
     "toggle_menu_title": "Toggle menu",
     "edit_profile_icon_title": "Edit profile",
     "create_profile_icon_title": "Create profile",
-    "fetch_snapshot_icon_title": "Fetch snapshot",
+    "fetch_snapshot_icon_title": "Take snapshot",
     "cancel_snapshot_icon_title": "Cancel snapshot",
     "toggle_auto_snapshot_icon_title": "Toggle autosnapshotting",
     "remove_snapshot_icon_title": "Remove snapshots",
@@ -126,8 +126,8 @@
     "toggle_visibility_icon_title": "Show/hide",
     "clear_search_icon_title": "Clear search field",
     "net_worth_export": "Export data",
-    "net_worth_chart": "Net worth chart",
-    "tab_chart": "Tab breakdown chart",
+    "net_worth_chart": "Net worth history chart",
+    "tab_chart": "Tab breakdown history chart",
     "these_terms_inline": "these terms",
     "update_available": "Update available, ",
     "click": "click",
