--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -58,6 +58,8 @@
     "app_exit_action_settings": "Application on exit action"
   },
   "label": {
+    "icon_latest": "Only show the latest snapshot",
+    "icon_comparison": "Difference for the two latest snapshots",
     "icon_fetched_from": "Icon fetched from pathofexile.com",
     "no_rows_found": "No items found",
     "no_prices_retrieved": "No prices fetched for `{{league}}`, you can change pricing league in your profile",
