Reworked how snapshot items are stored and improved remove dialog

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -61,6 +61,7 @@
     "app_exit_action_settings": "Application on exit action"
   },
   "label": {
+    "items_missing": "No items exist on snapshot",
     "icon_latest": "Only show the latest snapshot",
     "icon_comparison": "Difference for the two latest snapshots",
     "icon_fetched_from": "Icon fetched from pathofexile.com",
