--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -66,6 +66,7 @@
     "icon_comparison": "Difference for the two latest snapshots",
     "icon_fetched_from": "Icon fetched from pathofexile.com",
     "no_rows_found": "No items found",
+    "snapshotting_info_icon": "We are only allowed to do 30 requests per 5 minutes, which is why you might see this message for a prolonged time",
     "no_prices_retrieved": "No prices fetched for `{{league}}`, you can change pricing league in your profile",
     "customize_prices": "Customize prices",
     "set_custom_price": "Set custom price",
@@ -161,7 +162,7 @@
     "google_chrome": "Google Chrome",
     "mozilla_firefox": "Mozilla Firefox",
     "microsoft_edge": "Microsoft Edge",
-    "stash_tab_count_warning": "Selecting more than 10 tabs will increase the snapshot duration significantly",
+    "stash_tab_count_warning": "Selecting many tabs (especially Map / Unique tab) can increase the snapshot duration significantly",
     "open_on_ninja": "View on poe.ninja",
     "copy_link": "Copy link",
     "discord": "Discord Server",
