Improvements to tour

--- a/ExilenceNextApp/public/i18n/en/stepper.json
+++ b/ExilenceNextApp/public/i18n/en/stepper.json
@@ -23,7 +23,7 @@
     "overlay_step": "Here you can toggle the net worth overlay, for a slim overview while you map!",
     "group_step": "Here you can group up with your friends to see your combined net worth status.",
     "notifications_step": "Everything that happens in the app will be displayed here.",
-    "support_panel_step": "Here you can see what's new in latest release, report a bug, submit a feature request, re-run this tour or get our Discord server invitation.",
+    "support_panel_step": "Here you can see what's new in the latest release, report a bug, submit a feature request, re-run this tour or get our Discord server invitation.",
     "currency_switch": "Clicking this button will switch the currency type between chaos and exalts.",
     "reset_income": "Clicking this button resets your income."
   },
