--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -65,6 +65,8 @@
     "icon_latest": "Only show the latest snapshot",
     "icon_comparison": "Difference for the two latest snapshots",
     "icon_fetched_from": "Icon fetched from pathofexile.com",
+    "income_based_on": "Based on last hour",
+    "income_based_on_tooltip": "Income is calculated based on snapshot values over the last hour",
     "no_rows_found": "No items found",
     "snapshotting_info_icon": "Exilence next is only allowed to do 30 requests per 5 minutes, which is why you might see this message for a prolonged time",
     "no_prices": "No prices retrieved",
