--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -68,6 +68,7 @@
     "income_based_on": "Based on last hour",
     "income_based_on_tooltip": "Income is calculated based on snapshot values over the last hour",
     "no_rows_found": "No items found",
+    "item_table_placeholder": "No items found for the selected profile, take a snapshot to begin (top right)",
     "snapshotting_info_icon": "Exilence next is only allowed to do 30 requests per 5 minutes, which is why you might see this message for a prolonged time",
     "no_prices": "No prices retrieved",
     "no_prices_retrieved": "No prices fetched for `{{league}}`, you can change pricing league in your profile",
