--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -81,7 +81,7 @@
     "custom_price": "Custom price",
     "custom_price_placeholder": "Custom price",
     "toggle_visible_columns": "Edit columns",
-    "show_stash_tab_filter": "Show filter",
+    "show_stash_tab_filter": "Create filter",
     "disable_stash_tab_filter": "Disable filter",
     "export_image": "Export as PNG to Clipboard",
     "toggle_export_menu": "Export data",
