Fix: Stepper and additional fixes

--- a/ExilenceNextApp/public/i18n/en/common.json
+++ b/ExilenceNextApp/public/i18n/en/common.json
@@ -191,8 +191,8 @@
     "copy_link": "Copy link",
     "discord": "Discord Server",
     "retake_tour": "Re-take Tour",
+    "retake_net_worth_session_tour": "Re-take Net Worth Session Tour",
     "whats_new": "What's new",
-
     "credits": "Credits",
     "faq": "FAQ",
     "bug_report": "Bug Report",
