--- a/ExilenceNextApp/public/i18n/en/stepper.json
+++ b/ExilenceNextApp/public/i18n/en/stepper.json
@@ -4,6 +4,7 @@
     "net_worth_step": "Net worth View",
     "bulk_sell_step": "Bulk sell View",
     "settings_step": "Settings view",
+    "networth_session_step": "Net worth session section",
     "profile_step": "Profile section",
     "snapshot_step": "Snapshot section",
     "overlay_step": "Overlay section",
@@ -18,6 +19,7 @@
     "net_worth_step": "In this view you can track all your gains and losses and how much your stash is worth",
     "bulk_sell_step": "In this view you can share your stash items via a generated image and message to various Discord communities",
     "settings_step": "In this view you can manage your settings",
+    "networth_session_step": "In this area you can start, pause and stop net worth sessions. Here you can switch the view, if an session is started.",
     "profile_step": "In this area you can manage your profiles, and create multiple ones for different setups for quick access.",
     "snapshot_step": "Here you take snapshots to record your current net worth, and you can also enable automatic snapshotting in the settings.",
     "overlay_step": "Here you can toggle the net worth overlay, for a slim overview while you map!",
@@ -28,6 +30,7 @@
     "reset_income": "Clicking this button resets your income."
   },
   "body2": {
+    "networth_session_step": "For each profile you can start an isolated session. They are independent from each other, even for the same stashtabs. For more information simply start a session.",
     "profile_step": "Profiles are the core of the app where you select your stash tabs to track.",
     "snapshot_step": "A snapshot represents a recording of your current stash tabs (controlled by the profile)."
   }
