--- a/ExilenceNextApp/public/i18n/en/net_worth_stepper.json
+++ b/ExilenceNextApp/public/i18n/en/net_worth_stepper.json
@@ -4,6 +4,7 @@
     "initial_step": "What are net worth session",
     "networth_step": "Net worth section",
     "income_step": "Income section",
+    "income_switch": "Switch income",
     "session_duration_step": "Session duration section",
     "session_started_at_step": "Session start section",
     "session_duration_history_chart_step": "Session duration history chart",
@@ -20,6 +21,7 @@
     "initial_step": "A net worth session is similar to the normal view. However, you always start from scratch.\nAny items you add or remove to an active session are displayed.\nItems that you remove during an active session without having added them are displayed negatively.\nAny items you add or remove to an inactiv session will not be added or removed.\n\nThere are four different states for this. Online, paused, offline and inactive. You can only have one state active at a time.\n<strong>Online:</strong> If you start or continue the session. The session duration timer counts up.\n<strong>Pause:</strong> If the session is activ again or you pause the session.\n<strong>Offline:</strong> The time while the app is closed while the session is activ.\n<strong>Inactiv:</strong> If you switch to another profile.\n<strong>Interaction:</strong> You can activly 'Continue' or 'Pause' the session.",
     "networth_step": "Here you can see your net worth for the current session.",
     "income_step": "Here you can see your income. Calculated for the current session duration, i.e. the online duration.",
+    "income_switch": "Clicking this button will switch the income calculation.",
     "session_duration_step": "Here you can see your current session duration.",
     "session_started_at_step": "All time calculation is based on this session start.",
     "session_duration_history_chart_step": "Here you can see your net worth and income for the respective status. So online, paused, offline and inactive.",
